# crbridge

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
docs/: how-it-works.md
proxy/: CMakeLists.txt  main.cpp  version.def
scripts/: install.ps1  uninstall.ps1
src/: cr_iat_hook.cpp  cr_iat_hook.h  cr_loader.cpp  cr_loader.h  cr_patcher.cpp  cr_patcher.h  dllmain.cpp  function_hook.cpp  function_hook.h  host_alias.cpp  host_alias.h  steam_locator.cpp  steam_locator.h  version_check.cpp  version_check.h  vtable_hook.cpp  vtable_hook.h
tools/: refresh_offsets.py
